# tina

./: .gitignore  pyproject.toml  test.py
src/tina/: hacker.py
