[project]
name = "tina"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "cupofc0t", email = "cupofc0t@gmail.com" }
]
dependencies = [
    "transformations>=2022.9.26",
    "taichi<=0.7.13",
    "pillow>=10.2.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tina"]
